--- a/index.html
+++ b/index.html
@@ -92,15 +92,15 @@ Have fun creating your portfolio on this template!!! -->
     </script>
     <!-- End of Google Analytics -->
   </head>
-  <body>
+  <body>	<!-- B O D Y ------------------------------------------------------>
     <!-- Hero Section -->
     <div id="hero">
       <section class="container">
         <h1 class="hero-title">
           Hi, my name is <span class="text-color-main name">Shrey Patel</span>
-          <br />
-          I'm a Business Enthusiast and an Entrepreneur.
-        </h1>
+          </h1>
+          <h2>I'm a Business Enthusiast and an Entrepreneur.
+        </h2>
         <p class="hero-cta">
           <a class="cta-btn cta-btn--hero" href="#contact">Get in touch</a>
         </p>
