--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ Have fun creating your portfolio on this template!!! -->
         <h1 class="hero-title">
           Hi, my name is <span class="text-color-main name">Shrey Patel</span>
           </h1>
-          <h2 class="hero-title">I'm a Business Enthusiast and an Entrepreneur.
+          <h2 class="project-wrapper__text-title">I'm a Business Enthusiast and an Entrepreneur.
         </h2>
         <p class="hero-cta">
           <a class="cta-btn cta-btn--hero" href="#contact">Get in touch</a>
