--- a/index.html
+++ b/index.html
@@ -96,12 +96,8 @@ Have fun creating your portfolio on this template!!! -->
     <!-- Hero Section -->
     <div id="hero">
       <section class="container">
-        <h1 class="hero-title">
-          Hi, my name is <span class="text-color-main name">Shrey Patel</span>
-          </h1>
-          <div class="project-wrapper__text">
-              <h3 class="project-wrapper__text-title">I'm a Business Enthusiast and an Entrepreneur.</h3>
-          </div>
+        <h1 class="hero-title">Hi, my name is <span class="text-color-main name">Shrey Patel</span></h1>
+        <h3 class="hero-title">I'm a Business Enthusiast and an Entrepreneur.</h3>
         <p class="hero-cta">
           <a class="cta-btn cta-btn--hero" href="#contact">Get in touch</a>
         </p>
