--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ Have fun creating your portfolio on this template!!! -->
     </section>
     <!-- /END About Section -->
 
-    <!--Projects Section-->
+    <!--Projects Section------------------------------------------------------------------------------------------------->
     <section id="projects">
       <div class="container">
         <div class="project-wrapper">
@@ -179,6 +179,8 @@ Have fun creating your portfolio on this template!!! -->
                     src="./assets/project.png"
                     class="img-fluid"
                     alt="Project Image"
+                    width="300" 
+                    height="512"
                   />
                 </div>
               </a>
