--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ Have fun creating your portfolio on this template!!! -->
     </section>
     <!-- /END About Section -->
 
-    <!--Projects Section------------------------------------------------------------------------------------------------->
+    <!--Projects Section------------------------------------------------------------------------------------------------------------->
     <section id="projects">
       <div class="container">
         <div class="project-wrapper">
@@ -175,13 +175,7 @@ Have fun creating your portfolio on this template!!! -->
             <div class="project-wrapper__image">
               <a href="#" target="_blank" rel="noopener noreferrer">
                 <div class="thumbnail rounded">
-                  <img
-                    src="./assets/project.png"
-                    class="img-fluid"
-                    alt="Project Image"
-                    width="300" 
-                    height="512"
-                  />
+                  <img src="./assets/project.png", class="img-fluid", alt="Project Image", width="300", height="512"/>
                 </div>
               </a>
             </div>
