--- a/index.html
+++ b/index.html
@@ -324,13 +324,11 @@ Have fun creating your portfolio on this template!!! -->
         </div>
         <hr />
         <p class="footer__text">
-          &copy; <span id="year"></span> - Template by
           <a
             href="https://github.com/AnilSeervi"
             target="_blank"
-            rel="noopener noreferrer"
-            >Anil Seervi</a
-          >. <br />Made with &hearts;
+            rel="noopener noreferrer">Shrey Patel
+          </a>.
         </p>
       </div>
     </footer>
