--- a/index.html
+++ b/index.html
@@ -317,8 +317,7 @@ Have fun creating your portfolio on this template!!! -->
             href="#!"
             target="_blank"
             rel="noopener noreferrer"
-            aria-label="github"
-          >
+            aria-label="github">
             <i class="fa fa-github"></i>
           </a>
         </div>
@@ -327,8 +326,7 @@ Have fun creating your portfolio on this template!!! -->
           <a
             href="https://github.com/AnilSeervi"
             target="_blank"
-            rel="noopener noreferrer">Shrey Patel
-          </a>.
+            rel="noopener noreferrer">Shrey Patel</a>
         </p>
       </div>
     </footer>
