--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ Have fun creating your portfolio on this template!!! -->
           </div>
           
           <div class="about-wrapper__info">
-            <p class="about-wrapper__info-text"> <!--PROFILE PARA 1--------------------->
+            <p class="project-wrapper__text-info"> <!--PROFILE PARA 1--------------------->
             <table>
                 <tr>
                   <th>Full Name:</th>
@@ -147,7 +147,7 @@ Have fun creating your portfolio on this template!!! -->
             </table>
             </p>
           
-            <p class="about-wrapper__info-text"><!--PROFILE PARA 2--------------------->
+            <p class="project-wrapper__text-info"><!--PROFILE PARA 2--------------------->
               <table style="border: 0px;">
                 <tr>
                   <th>Father’s Name:</th>
@@ -298,8 +298,6 @@ Have fun creating your portfolio on this template!!! -->
           <!-- /END Project -->
         </div>
       </div>
-    </section>
-    <!-- End Projects Section -->
 
 <!-- Each .row is a project -->
           <article class="row">
@@ -337,9 +335,11 @@ Have fun creating your portfolio on this template!!! -->
               </a>
             </div>
           </article>
-          <!-- /END Project -->
+         <!-- /END Project -->
+      </section>
+    <!-- End Projects Section -->
 
-    <!-- Contact Section -->
+    <!-- CONTACT Section -------------------------------------------------------------->
     <section id="contact">
       <div class="container">
         <h2 class="section-title">Contact</h2>
