--- a/index.html
+++ b/index.html
@@ -103,8 +103,7 @@ Have fun creating your portfolio on this template!!! -->
         </p>
       </section>
       <a href="#about" class="scroll-down-link" aria-label="scroll-down">
-        <div class="scroll-down"></div
-      ></a>
+        <div class="scroll-down"></div></a>
     </div>
     <!-- /END Hero Section -->
 
@@ -120,7 +119,7 @@ Have fun creating your portfolio on this template!!! -->
               alt="Profile Image"
             />							<!-- PROFILE IMAGE ----------------------------------------->
           </div>
-          
+          <span class="about-wrapper__cta">
           <div class="about-wrapper__info">
             <p class="project-wrapper__text-info"> <!--PROFILE PARA 1--------------------->
             <table>
@@ -171,7 +170,7 @@ Have fun creating your portfolio on this template!!! -->
                 </tr>
             </table>
             </p>
-        
+          </span>
             <span class="about-wrapper__cta">
               <a href="#" class="cta-btn cta-btn--resume">View Resume</a>
             </span>
