--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ Have fun creating your portfolio on this template!!! -->
             <div class="project-wrapper__image">
               <a href="#" target="_blank" rel="noopener noreferrer">
                 <div class="thumbnail rounded">
-                  <img src="./assets/1.png" , class="img-fluid" , alt="Project Image" , width="300" , height="512" />
+                  <img src="./assets/1.jpg" , class="img-fluid" , alt="Project Image" , width="300" , height="512" />
                   <!-- IMAGE 1 -->
                 </div>
               </a>
@@ -203,7 +203,7 @@ Have fun creating your portfolio on this template!!! -->
             <div class="project-wrapper__image">
               <a href="#" target="_blank" rel="noopener noreferrer">
                 <div class="thumbnail rounded">
-                  <img src="./assets/2.png" class="img-fluid" alt="Project Image" />
+                  <img src="./assets/2.jpg" class="img-fluid" alt="Project Image" />
                   <!-- IMAGE 2 -->
                 </div>
               </a>
@@ -234,7 +234,7 @@ Have fun creating your portfolio on this template!!! -->
             <div class="project-wrapper__image">
               <a href="#" target="_blank" rel="noopener noreferrer">
                 <div class="thumbnail rounded">
-                  <img src="./assets/3.png" class="img-fluid" alt="Project Image" />
+                  <img src="./assets/3.jpg" class="img-fluid" alt="Project Image" />
                   <!-- IMAGE 3 -->
                 </div>
               </a>
@@ -264,7 +264,7 @@ Have fun creating your portfolio on this template!!! -->
         <div class="project-wrapper__image">
           <a href="#" target="_blank" rel="noopener noreferrer">
             <div class="thumbnail rounded">
-              <img src="./assets/3.png" class="img-fluid" alt="Project Image" />
+              <img src="./assets/3.jpg" class="img-fluid" alt="Project Image" />
               <!-- IMAGE 4 -->
             </div>
           </a>
