--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ Have fun creating your portfolio on this template!!! -->
                 </tr>
                 <tr>
                   <th>Sister’s Name:</th>
-                  <td>Maitri Ramanbhai Limbani (Master's of Science - Canada)</td>
+                  <td>Maitri Limbani (Canada)</td>
                 </tr>
                 <tr>
                   <th>Mosal:</th>
@@ -176,7 +176,7 @@ Have fun creating your portfolio on this template!!! -->
             <div class="project-wrapper__image">
               <a href="#" target="_blank" rel="noopener noreferrer">
                 <div class="thumbnail rounded">
-                  <img src="./assets/1.jpg" , class="img-fluid" , alt="Project Image" , width="300" , height="512" />
+                  <img src="./assets/1.JPG" , class="img-fluid" , alt="Project Image" , width="300" , height="512" />
                   <!-- IMAGE 1 -->
                 </div>
               </a>
@@ -203,7 +203,7 @@ Have fun creating your portfolio on this template!!! -->
             <div class="project-wrapper__image">
               <a href="#" target="_blank" rel="noopener noreferrer">
                 <div class="thumbnail rounded">
-                  <img src="./assets/2.jpg" class="img-fluid" alt="Project Image" />
+                  <img src="./assets/2.JPG" class="img-fluid" alt="Project Image" />
                   <!-- IMAGE 2 -->
                 </div>
               </a>
@@ -234,7 +234,7 @@ Have fun creating your portfolio on this template!!! -->
             <div class="project-wrapper__image">
               <a href="#" target="_blank" rel="noopener noreferrer">
                 <div class="thumbnail rounded">
-                  <img src="./assets/3.jpg" class="img-fluid" alt="Project Image" />
+                  <img src="./assets/3.JPG" class="img-fluid" alt="Project Image" />
                   <!-- IMAGE 3 -->
                 </div>
               </a>
@@ -262,7 +262,7 @@ Have fun creating your portfolio on this template!!! -->
             <div class="project-wrapper__image">
               <a href="#" target="_blank" rel="noopener noreferrer">
                 <div class="thumbnail rounded">
-                  <img src="./assets/3.jpg" class="img-fluid" alt="Project Image" />
+                  <img src="./assets/3.JPG" class="img-fluid" alt="Project Image" />
                   <!-- IMAGE 4 -->
                 </div>
               </a>
